2003-12-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Remove all-local: $(ARCH).
	* console/Makefile.am: Remove all-local: $(ARCH).
	* irq/Makefile.am: Remove all-local: $(ARCH).
	* network/Makefile.am: Remove all-local: $(ARCH).
	* start/Makefile.am: Remove all-local: $(ARCH).
	* startup/Makefile.am: Remove all-local: $(ARCH).
	* timer/Makefile.am: Remove all-local: $(ARCH).
	* wrapup/Makefile.am: Remove all-local: $(ARCH).

2003-09-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Merge-in include/Makefile.am.
	Reflect changes to bsp.am.
	* include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2003-09-17	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bsp_specs: Remove *lib:.

2003-09-04	Joel Sherrill <joel@OARcorp.com>

	* clock/clockdrv.c, console/uart.c, include/bsp.h, include/ep7312.h,
	irq/bsp_irq_asm.S, irq/bsp_irq_init.c, irq/irq.c, irq/irq.h,
	start/start.S, startup/bspstart.c, startup/exit.c, startup/linkcmds,
	timer/timer.c: URL for license changed.

2003-08-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved aclocal/.

2003-08-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Reflect having moved automake/.
	* clock/Makefile.am: Reflect having moved automake/.
	* console/Makefile.am: Reflect having moved automake/.
	* include/Makefile.am: Reflect having moved automake/.
	* irq/Makefile.am: Reflect having moved automake/.
	* network/Makefile.am: Reflect having moved automake/.
	* start/Makefile.am: Reflect having moved automake/.
	* startup/Makefile.am: Reflect having moved automake/.
	* timer/Makefile.am: Reflect having moved automake/.
	* wrapup/Makefile.am: Reflect having moved automake/.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 445/bsps
	* bsp_specs: Remove -D__embedded__ -Asystem(embedded) from cpp.