@@ -16,12 +16,12 @@ nodist_include_HEADERS += $(top_srcdir)/../../shared/include/coverhd.h
 
 all-local: $(PREINSTALL_FILES)
 
-$(PROJECT_INCLUDE)/ep7312.h: include/ep7312.h
-	$(INSTALL_DATA) $< $@
+$(PROJECT_INCLUDE)/ep7312.h: include/ep7312.h $(PROJECT_INCLUDE)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/ep7312.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/ep7312.h
 
-$(PROJECT_INCLUDE)/coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h
-	$(INSTALL_DATA) $< $@
+$(PROJECT_INCLUDE)/coverhd.h: $(top_srcdir)/../../shared/include/coverhd.h $(PROJECT_INCLUDE)/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/coverhd.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/coverhd.h
 
 include $(top_srcdir)/../../../../automake/subdirs.am
