@@ -7,8 +7,6 @@ PGM = $(ARCH)/network.rel
 C_FILES = network.c 
 C_O_FILES = $(C_FILES:%.c=$(ARCH)/%.o)
 
-include_HEADERS = 
-
 OBJS = $(C_O_FILES)
 
 include $(top_srcdir)/../../../../automake/compile.am
@@ -18,15 +16,6 @@ include $(top_srcdir)/../../../../automake/lib.am
 # (OPTIONAL) Add local stuff here using +=
 #
 AM_CPPFLAGS += -D__INSIDE_RTEMS_BSD_TCPIP_STACK__
-
-$(PROJECT_INCLUDE):
-	$(mkinstalldirs) $@
-
-$(PROJECT_INCLUDE)/%.h: %.h
-	$(INSTALL_DATA) $< $@
-
-PREINSTALL_FILES = $(PROJECT_INCLUDE) \
-    $(include_HEADERS:%=$(PROJECT_INCLUDE)/%)
 
 $(PGM): $(OBJS)
 	$(make-rel)
